G1: Memory leak in G1CodeRootSet after JDK-8315503

XMLWordPrintable

    • gc
    • b22

        JDK-8315503 replaced ResourceHashTable with ConcurrentHashTable.
        When it tries to clear G1CodeRootSetHashTable, it calls ConcurrentHashTable:table.unsafe_reset().

        The method has comments states:
         // Unsafe reset and resize the table. This method assumes that we
          // want to clear and maybe resize the internal table without the
          // overhead of clearing individual items in the table.

        So, if the table is not empty, then all entries in table are leaked.

              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: