8318720: G1: Memory leak in G1CodeRootSet after JDK-8315503